belajar-kubernetes/nginx-with-annotations.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-annotations
  labels:
    team: product
    version: 1.0.1
    environment: production
  annotations:
    description: ini adalah aplikasi yang dibuat oleh tim product
    something: this is something...
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
